# nfe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  nfe.qrc  pull_request_template.md
src/: advanced.cpp  advanced.h  afdata.h  chartview.cpp  chartview.h  controls.cpp  controls.h  device.cpp  device.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  powercurvedialog.cpp  powercurvedialog.h  powercurvedialog.ui  profiles.cpp  profiles.h  rpdata.h  screen.cpp  screen.h  settings.cpp  settings.h  smartstat.cpp  smartstat.h  tfrdialog.cpp  tfrdialog.h  tfrdialog.ui
src/af/: mainwindow.ui
src/monitor/: callout.cpp  callout.h  monitordialog.cpp  monitordialog.h  monitordialog.ui
src/rp/: mainwindow.ui
src/theme/: display.cpp  display.h  displaybig.cpp  displaysmall.cpp  iconengine.cpp  iconengine.h  renderarea.cpp  renderarea.h  themedialog.cpp  themedialog.h  themedialog.ui
